1. Метод .of [#371182]